<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:shrinkColumns="0"
    android:stretchColumns="0"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/folder_color">

        <TextView
            android:id="@+id/nameOFileView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/title_name_of_file"
            android:textColor="@color/text_color"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/grey_200" />

        <TextView
            android:id="@+id/sizeOFileView"
            android:layout_width="32dp"
            android:layout_height="wrap_content"

            android:text="@string/title_size_of_file"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/grey_200" />

        <TextView
            android:id="@+id/modifiedtextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/title_date_modified"
            android:textColor="@color/text_color"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>