<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:shrinkColumns="1"
    android:stretchColumns="1"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_folder" />

        <TextView
            android:id="@+id/nameOFileView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="@string/name_of_file" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/grey_200" />

        <TextView
            android:id="@+id/sizeOFileView"
            android:layout_width="32dp"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            tools:text="@string/size_of_file" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/grey_200" />

        <TextView
            android:id="@+id/modifiedtextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            tools:text="@string/date_modified" />
    </TableRow>
</TableLayout>